--- a/frontends/react18/src/styles/global.css
+++ b/frontends/react18/src/styles/global.css
@@ -69,7 +69,7 @@
 }
 
 :root {
-  font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+  font-family: "Segoe UI", Tahoma, Geneva, Verdana, sans-serif;
   font-size: 16px;
   line-height: 24px;
   font-weight: 400;
